# Variational-rovibrational-calculations

./: CMakeLists.txt  README.md  VarSolver.cpp  VarSolver.h  co2.cpp  constants.cpp  constants.h
